# RagPipeline

./: .env.example  README.md  main.py  pyproject.toml
assets/: RagPipline.postman_collection.json
controllers/: DataController.py
docker/: docker-compose.yml
helpers/: config.py
model/enums/: ResponseEnums.py
routes/: base.py  data.py
src/: main.py
src/controllers/: BaseController.py  DataController.py  ProcessController.py  ProjectController.py
src/helpers/: config.py
src/model/db_schemas/: data_chunk.py  project.py
src/model/enums/: ProcessingEnum.py  ResponseEnums.py
src/routes/: data.py
src/routes/schema/: data.py
